<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">smart</string>

    <string name="menu_item_toggle_global">Toggle global mode</string>
    <string name="menu_item_toggle_debug">Toggle debug mode</string>
    <string name="menu_item_clear_log">Clear log</string>
    <string name="menu_item_toggle_app">Toggle app network filter mode</string>
    <string name="menu_item_update_config">Update config</string>
    <string name="menu_item_switch">Proxy</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="config_url">Config URL</string>
    <string name="config_not_set_value">Not set</string>
    <string name="config_url_scan">Scan an QR code</string>
    <string name="config_url_manual">Type manually</string>
    <string name="config_url_scan_hint">Scan the QR code of your config url</string>
    <string name="select_app">Select App</string>
    <string name="select_app_detail">No</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More&#8230;</string>
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="about_info">It could run on any Android 4.0+ device , no need to root, and it is modified based on SmartProxy and github.com/dawei101/shadowsocks-android-java</string>
    <string name="exit_confirm_info">This will disconnect the VPN connection, Are you sure to exit?</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="config_url_hint">ss://method:password@host:port</string>
</resources>
