<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_switch"
        android:actionViewClass="android.widget.Switch"
        android:showAsAction="always"
        android:title="@string/menu_item_switch"></item>

    <item
        android:id="@+id/menu_item_toggle_global"
        android:title="@string/menu_item_toggle_global"></item>

    <item
        android:id="@+id/menu_item_toggle_debug"
        android:title="@string/menu_item_toggle_debug"></item>

    <item
        android:id="@+id/menu_item_clear_log"
        android:title="@string/menu_item_clear_log"></item>

    <item
        android:id="@+id/menu_item_toggle_app"
        android:title="@string/menu_item_toggle_app"></item>

    <item
        android:id="@+id/menu_item_update_config"
        android:title="@string/menu_item_update_config"></item>

    <item
        android:id="@+id/menu_item_about"
        android:title="@string/menu_item_about"></item>
    <item
        android:id="@+id/menu_item_exit"
        android:title="@string/menu_item_exit"></item>
</menu>
